--- a/PaginaInicial/homepage_css.css
+++ b/PaginaInicial/homepage_css.css
@@ -26,7 +26,7 @@
     flex-direction: column;
     align-items: center;
     position: relative;
-    padding-top: 180px; /* espaço para a imagem */
+    padding-top: 180px;
   }
   
   
